Attempt at adding descrptions

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
+<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+
 <article class="post">
 
   <header class="post-header">
