--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
