--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,4 +19,6 @@
 
 </html>
 
+<!-- Mathjax -->
+
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
