--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -12,7 +12,7 @@
       // Register the service worker
       navigator.serviceWorker
         .register("{{ site.baseurl }}/serviceworker.js", {
-          scope: "./"
+          scope: "/"
         })
         .then(function (reg) {
           console.log("Service worker has been registered for scope: " + reg.scope);
