--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -39,3 +39,6 @@
 <link rel="stylesheet" href="/assets/plugins/katex.0.13.11/katex.min.css">
 {% endif %}
 
+<!-- Offline Jekyll-->
+{% register_service_worker %}
+
